--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,14 @@
 
       </div>
       <div id =  "aboutPage" class="inactive">
-        <p> MarkerVille is a website that displays information about biomarkers.
+        <p> Markerville is a web-hosted database that displays information about biomarkers.
         Allows users to search and edit existing information, while adding new entries of their own.
-        We aim to create a community around biomarkers in the clinical research world and beyond.
-        Developed by Mallick Lab at the Stanford Canary Center for Cancer Early Detection.
-        Built with Node.js, Express, and MySQL. Thanks for viewing! More coming soon!" </p>
+        We aim to create a community around biomarkers in the clinical research world and beyond. 
+
+        We are powered by Snorkel, an NLP pipeline package written in Python and developed by Stanford's Info Lab.
+
+        Developed by Mallick Lab at the Canary Center for Cancer Early Detection, Stanford University School of Medicine.
+        Built with Node.js, Express, and MySQL. Thanks for visiting! More coming soon. </p>
         <div id = "aboutPic">
         <img id = "gautam" src = "images/gautum.jpg"></img>
       </div>
