--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         Developed by Mallick Lab at the Canary Center for Cancer Early Detection, Stanford University School of Medicine.
         Built with Node.js, Express, and MySQL. Thanks for visiting! More coming soon. </p>
         <div id = "aboutPic">
-        <img id = "gautam" src = "images/gautum.jpg"></img>
+        <img id = "gautam" src = "images/gautam.jpg"></img>
       </div>
           <div class = "logo-cont">
         <img class = "logo" src = "images/logo.png"> </img>
