updated relations/columns in search

--- a/public/index.html
+++ b/public/index.html
@@ -64,18 +64,19 @@
           <div id = "result-table-cont">
          <table>
            <tr>
+            <th> PubMed ID
+            <th> Biomarker Name
             <th> Biomarker Type
-            <th> Cancer Type
+            <th> Biomarker Medium
+            <th> Associated Condition
             <th> Associated Drug
-            <th> Medium
            </tr>
          </table>
        </div>
       </div>
 
       <div id = "database">
-
-          <p> Welcome to MarkerVille! <br>Search by biomarker, drug, or cancer type: </p>
+          <p> Welcome to Markerville! <br>Search by biomarker, drug, or cancer type: </p>
           <div>
             <!-- onsubmit="return false" -->
 
